--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,2 +1,9 @@
-- name: Angular Github Actions
-  uses: mayur-rawte/github-angular-actions@latest
+- name: First interaction
+  uses: actions/first-interaction@v1.0.0
+  with:
+    # Token for the repo. Can be passed in using {{ secrets.GITHUB_TOKEN }}
+    repo-token: 
+    # Comment to post on an individuals first issue
+    issue-message: # optional
+    # Comment to post on an individuals first pull request
+    pr-message: # optional
